# mnemos

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 0373eaa00528_using_uuids_instead_of_ids.py  1d153d44399c_added_created_at_and_updated_at_to_user.py  4a1135ae4cfe_first_migration.py  732253d88d5a_drop_fk_on_a_superseded_by.py  860d1b9c0fde_created_user_chat_and_messages_models.py  a20c5b5473eb_added_server_defaults_for_created_at_.py  ffdf22b30b74_added_memory_structured_and_memory_log_.py
src/: __init__.py  config.py  logger.py
src/chats/: chat_enums.py  chat_repository.py  chat_router.py  chat_schemas.py  chat_service.py  chat_utils.py  router.py
src/components/: chatbot.py  factual_memory.py  memory_extractor.py  memory_retriever.py  short_term_memory.py
src/database/: __init__.py  database.py  db_enums.py  models.py
src/schemas/: base_schema.py  memory_extractor_schema.py
src/users/: user_repository.py  user_schemas.py
src/utils/: system_prompts.py
